...
                        ),
                        // time
                      ],
                    ),
                    const SizedBox(height: 16),
                    MyButton(
                      key: const Key('book_appointment_button'),
                      borderRadius: 30,
                      width: MediaQuery.of(context).size.width,
                      height: 50,
                      backgroundColor: _getButtonColor(_buttonState),
                      child: _getButtonChild(_buttonState),
                      onPressed: () {
...
  Widget _getButtonChild(BookingButtonState? buttonState) {
    TextStyle? textStyle = Theme.of(context).textTheme.bodyLarge?.copyWith(
          color: Theme.of(context).colorScheme.onPrimary,
        );
    switch (buttonState) {
      case BookingButtonState.notValid:
        return Text('Select Date and Time', style: textStyle);
      case BookingButtonState.loading:
        return const Loader();
      case BookingButtonState.booked:
        return Text('Booked', style: textStyle);
      case BookingButtonState.error:
        return Text('Error', style: textStyle);
      case BookingButtonState.readyToBook:
        return Text('Book Appointment', style: textStyle);
      default:
        return Text('Book Appointment', style: textStyle);
    }
  }

  Color _getButtonColor(BookingButtonState? buttonState) {
...
