...
                  CupertinoIcons.check_mark_circled_solid,
                  size: 160,
                  color: Colors.green,
                ),
                const SizedBox(height: 16),
                Text(
                  'Appointment Booked',
                  style: Theme.of(context).textTheme.headlineMedium,
                ),
                Text(
                  'Your appointment has been booked successfully',
                  style: Theme.of(context).textTheme.bodyLarge?.copyWith(
                        color: Theme.of(context).colorScheme.inverseSurface,
...
                      ),
                    ],
                  ),
                ),
                const Spacer(),
                MyButton(
                  key: const Key('done_button'),
                  width: MediaQuery.of(context).size.width,
                  child: Text(
                    'Done',
                    style: Theme.of(context).textTheme.bodyLarge?.copyWith(
                        color: Theme.of(context).colorScheme.onPrimary),
                  ),
...
