...
                icon: FontAwesomeIcons.heart,
                iconColor: Theme.of(context).colorScheme.inverseSurface,
                iconSize: 18,
                text: 'Favorites',
              ),
              GButton(
                key: const Key('appointments_tab'),
                icon: CupertinoIcons.calendar_today,
                iconColor: Theme.of(context).colorScheme.inverseSurface,
                iconSize: 20,
                text: 'Appointments',
              ),
              GButton(
...
